--- a/desafio-01/responsive.css
+++ b/desafio-01/responsive.css
@@ -4,7 +4,6 @@
   }
 
   header {
-    display: flex;
     flex-direction: row;
     width: 1440;
     height: 100vh;
@@ -26,7 +25,6 @@
 
   .logo {
     margin: 0;
-    display: flex;
     justify-content: center;
     align-items: center;
   }
@@ -49,6 +47,10 @@
     display: flex;
     align-items: center;
     margin: 0 30px 0 0;
+  }
+  header nav ul li a {
+    padding: 10px 5px;
+    transition: 0.3s ease-in-out;
   }
 
   header nav button {
