--- a/desafio-01/style.css
+++ b/desafio-01/style.css
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   font-family: 'Public Sans', sans-serif;
   color: black;
+  text-decoration: none;
 }
 
 body {
@@ -57,11 +58,12 @@ header nav ul li {
 
 header nav ul li a {
   text-decoration: none;
+  transition: 0.3s ease-in-out;
 }
 
 header nav ul li a:hover {
-  color: white;
   padding: 10px 20px;
+  color: white;
   background: var(--green);
 }
 
