--- a/style.css
+++ b/style.css
@@ -32,6 +32,13 @@ main {
   height: 100%;
 }
 
+.flex-box {
+  background: url(assets/flex-box.png) center center no-repeat;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
+
 @media (max-width: 998px) {
   h1 {
     font-size: 1.5rem;
@@ -50,5 +57,12 @@ main {
   .agencia-xyz {
     background: url(assets/agencia-mobile.png) center center no-repeat;
     background-size: contain;
+  }
+
+  .flex-box {
+    background: url(assets/flexbox-mobile.png) center center no-repeat;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
   }
 }
